<resources>
    <string name="app_name">Notes_app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_notes_list_fragment_port">NotesListFragmentPort</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="user">Имя Фамилия</string>
    <string name="user_bd">Родился 00.00.0000</string>
    <string name="menu_1_txt">Боковое меню 1</string>
    <string name="favor">Избранное</string>
    <string name="menu_custom">Поиск</string>
    <string name="custom_txt">Настроки</string>
    <string name="favot_text">Избранное</string>
    <string name="search_txt">Поиск</string>
    <string name="date_text">Дата заметки</string>
    <string name="body_text">Текст заметки</string>
    <string name="note_name_text">Имя заметки</string>
    <string name="note_body_btn_txt">Текст заметки</string>
    <string name="note_list_btn_txt">Список</string>
    <string name="customizations">Настройки</string>
    <string name="search">Поиск</string>
    <string name="favorite">Избранное</string>
    <string name="add">Добавить</string>
    <string name="clear">Очистить</string>


</resources>