<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_customizations"
        android:orderInCategory="10"
        android:title="@string/customizations"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_help"/>

    <item android:id="@+id/action_favorite"
        android:icon="@android:drawable/star_big_on"
        android:orderInCategory="8"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="7"
        android:title="@string/search"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <item
        android:id="@+id/action_add"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="1"
        android:title="@string/add"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_clear"
        android:icon="@android:drawable/ic_notification_clear_all"
        android:orderInCategory="2"
        android:title="@string/clear"
        app:showAsAction="always" />
</menu>