<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/name_of_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_name_text"
        android:textSize="@dimen/text_size"/>

    <TextView
        android:id="@+id/text_of_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/body_text"
        android:textSize="@dimen/text_size"/>

    <TextView
        android:id="@+id/date_of_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_text"
        android:textSize="@dimen/text_size" />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>